# kennwilliamsondotorg

./: .cursorignore  .env.development  .env.example  .gitignore  ARCHITECTURE.md  BOT-PROTECTION-DESIGN.md  CHANGELOG.md  CLAUDE.md  CODING-RULES.md  CONTENT-CREATION-RESEARCH.md  CONTINUATION-CONTEXT.md  DATA-CONTRACTS.md  DATA-EXPORT-TDD-PLAN.md  DESIGN-FIGMENT-SSM-SECRETS.md  DESIGN-MESSAGING-FEATURE.md  DESIGN-OAUTH-EMAIL-VERIFICATION.md  DESIGN-USER-AUTH-SCHEMA-REFACTOR.md  DEVELOPMENT-WORKFLOW.md  DOCUMENTATION-GUIDELINES.md  EMAIL-FORWARDING-CLEANUP-POLICY.md  EMAIL-SUPPRESSION-FEATURE-WORKING.md  FEATURE-PROFILE-MANAGEMENT.md  HOT-RELOAD-DEV-PROMPT.md  IMPLEMENTATION-AUTH.md  IMPLEMENTATION-BACKEND.md  IMPLEMENTATION-CICD.md  IMPLEMENTATION-DATA-CONTRACTS.md  IMPLEMENTATION-DATABASE.md  IMPLEMENTATION-DEPLOYMENT.md  IMPLEMENTATION-FRONTEND.md  IMPLEMENTATION-HTTP-CLIENT.md  IMPLEMENTATION-LOGGING.md  IMPLEMENTATION-NGINX.md  IMPLEMENTATION-SCRIPTS.md  IMPLEMENTATION-SECURITY.md  IMPLEMENTATION-TESTING.md  IMPLEMENTATION-UTILS.md  LEGAL-COMPLIANCE-GAPS.md  OPENAPI-RECOMMENDATION.md  PHRASES_WORKING_FEATURE_IMPLEMENTATION.md  (+22 more)
backend/: .env  .env.example  .env.test  Cargo.toml  Dockerfile  Dockerfile.dev  TEST_REFACTOR_BUILDER_PATTERN.md
backend/.cargo/: audit.toml  config.toml
backend/.config/: nextest.toml
backend/.sqlx/: query-004bc3029d2802a362e0aee8ce12fa87f12f67e4e32618790b3d45a42181e908.json  query-0179ae17bf63bfdeff701625033a264d5a6e53eb5e3e85b6af05512a1e868af8.json  query-0263fad0203333f036366ef5cb46e17880a9957f8647d17530139632bcc2a105.json  query-02768fb2d3900207e82bbcedecd87d78c10226015ed7355b5db3a2f943f6c044.json  query-02a88e0e52f6fc7c61571a6355f4a51cd9456e7fed782acd1b9602d41c3d5554.json  query-03d3ddf4495f1761e6f228f0e65978d8a0d2f9176ea831c9e49eebbe8b63d406.json  query-05049717fe6d48a979862b905f3af113a6e2a3e1ae4c4386b58a2e2f8040ac14.json  query-064784ea52b1dacbefd8ff9fe4942f19b9ee108c1ec57829fb9a8edb54f719e3.json  query-069a91ad48efd1a48ee94a29560f6d24085ae49986573bc211db98cba9d4f6ef.json  query-0743d8a95c713027dc2c1d8262d8009907608219673ff630c92e2d867554aa26.json  (+138 more)
backend/src/: lib.rs  main.rs
(+662 files in other folders)
