[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
bcrypt = "0.17"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
async-trait = "0.1"
mockall = "0.13.1"

[dev-dependencies]
actix-rt = "2"
actix-test = "0.1"
tokio-test = "0.4"
lazy_static = "1.4"
testcontainers = "0.25"
testcontainers-modules = "0.13"
