[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
# Feature flag for enabling mock objects and test utilities
mocks = []

[dependencies]
actix-web = "4"
actix-cors = "0.7"
askama = "0.14"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
bcrypt = "0.17"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
async-trait = "0.1"
mockall = "0.13.1"
redis = "0.32.5"
aws-config = { version = "1.8.7", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1.98.0"
reqwest = { version = "0.12.23", features = ["json"] }
oauth2 = { version = "5.0", features = ["reqwest"] }
base64 = "0.22"

[dev-dependencies]
# Enable mocks feature for tests
backend = { path = ".", features = ["mocks"] }
actix-rt = "2"
actix-test = "0.1"
tokio-test = "0.4"
lazy_static = "1.4"
testcontainers = "0.25"
testcontainers-modules = "0.13"
